@@ -1,7 +1,7 @@
 package org.example.efm.db;
 
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.ResultSet;
@@ -18,6 +18,13 @@ public class DatabaseManager {
 
     public static Connection getConnection() throws SQLException {
         if (conn == null || conn.isClosed()) {
+            // Ensure H2 driver is loaded (optional for modern JDBC, but good practice)
+            try {
+                Class.forName("org.h2.Driver");
+            } catch (ClassNotFoundException e) {
+                System.err.println("H2 JDBC Driver not found: " + e.getMessage());
+                e.printStackTrace(); // Or throw a runtime exception
+            }
             conn = DriverManager.getConnection(URL, USER, PASS);
         }
         return conn;
@@ -25,36 +32,47 @@ public class DatabaseManager {
 
     public static void initDatabase() {
         try (Connection c = getConnection(); Statement stmt = c.createStatement()) {
-            // Load and execute schema
-            String schemaSql = new String(Files.readAllBytes(Paths.get(DatabaseManager.class.getResource("/schema.sql").toURI())));
+            // Load and execute schema using InputStream and specifying UTF-8
+            InputStream schemaStream = DatabaseManager.class.getResourceAsStream("/schema.sql");
+            if (schemaStream == null) {
+                throw new RuntimeException("Cannot find schema.sql in the classpath. Make sure it's in src/main/resources/");
+            }
+            String schemaSql = new String(schemaStream.readAllBytes(), StandardCharsets.UTF_8);
+            schemaStream.close();
+
+            // Execute the schema script
+            // H2's execute method can handle multiple statements in a single string if separated by semicolons
             stmt.execute(schemaSql);
             System.out.println("Database schema initialized/verified.");
 
-            // Check if books table is empty before inserting sample data
+            // The sample data insertion logic previously here can be kept if desired,
+            // or ensure all data is in schema.sql
+            // For example, checking if books table is empty and inserting:
             ResultSet rs = stmt.executeQuery("SELECT COUNT(*) AS rowcount FROM books");
-            rs.next();
-            int count = rs.getInt("rowcount");
-            rs.close();
-
-            if (count == 0) {
-                System.out.println("Books table is empty. Inserting sample data...");
-                // It's better to load this from a file, but for simplicity, embedding a few here.
-                // For a larger list, load from a .sql file.
-                String sampleBooksSql
-                        = "INSERT INTO books (title, author, isbn, \"year\", available) VALUES "
-                        + "('The Lord of the Rings', 'J.R.R. Tolkien', '9780618640157', 1954, TRUE),"
-                        + "('Pride and Prejudice', 'Jane Austen', '9780141439518', 1813, TRUE),"
-                        + "('To Kill a Mockingbird', 'Harper Lee', '9780061120084', 1960, FALSE),"
-                        + "('1984', 'George Orwell', '9780451524935', 1949, TRUE),"
-                        + "('The Great Gatsby', 'F. Scott Fitzgerald', '9780743273565', 1925, TRUE);"; // Add more as needed
-                // For the full list, you would read 'sample_books.sql' like schema.sql
-                // String sampleBooksSql = new String(Files.readAllBytes(Paths.get(DatabaseManager.class.getResource("/sample_books.sql").toURI())));
-                stmt.execute(sampleBooksSql);
-                System.out.println("Sample books inserted.");
+            if (rs.next()) {
+                int count = rs.getInt("rowcount");
+                if (count == 0) {
+                    System.out.println("Books table is empty. The schema.sql should contain INSERT statements for books.");
+                    // If your schema.sql already has book inserts, this check might be redundant
+                    // or you can remove book inserts from schema.sql and handle them here.
+                }
             }
+            rs.close();
 
         } catch (Exception e) {
             System.err.println("Error during database initialization: " + e.getMessage());
+            e.printStackTrace(); // Print full stack trace for debugging
+        }
+    }
+
+    public static void closeConnection() {
+        try {
+            if (conn != null && !conn.isClosed()) {
+                conn.close();
+                System.out.println("Database connection closed.");
+            }
+        } catch (SQLException e) {
+            System.err.println("Error closing database connection: " + e.getMessage());
             e.printStackTrace();
         }
     }
